# rust-mysql-test-

./: .env  Cargo.toml
migrations/: 20250621075439_create_tasks_table.sql
src/: main.rs
