[package]
name = "userinstance"
version = "0.1.0"
edition = "2024"

[dependencies]

ferris-says = "0.3.1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3" # Used for some async utilities
chrono = { version = "0.4", features = ["serde"] } # For handling dates/timestamps